--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <!-- <video width="320" height="240" controls muted>
               <source src="./assets/imagenes/TheThingSP.mp4" type="video/mp4">
             </video> -->
-            <h4>Personaje Original, entrenadora pokémon con su equipo y speedpaint</h4>
+            <h4>Personaje Original, entrenadora pokémon con su equipo</h4>
             <a href="./assets/imagenes/THEthing.png" target="_blank">Ver el retrato</a>
           </div>
         </div>
