--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <a href="https://github.com/PocketSizeKaiju/ElOrko" target="_blank">Abrir</a>
           </div>
           <div class="proyecto">
+            <img src="" alt="Nostalgic Stars Pretty Cure">
+            <h4>Nostalgic Stars Pretty Cure</h4>
+            <a href="https://github.com/PocketSizeKaiju/NostalgicStarsPrettyCure" target="_blank">Open</a>
+          </div>
+          <div class="proyecto">
             <img src="./assets/imagenes/juegos/PETRIS.png" alt="Petris">
             <h4>PETRIS</h4>
             <a href="https://github.com/PocketSizeKaiju/PETRIS" target="_blank">Abrir</a>
@@ -209,6 +214,11 @@
         <h3>Ilustraciones</h3>
         <div class="grid">
           <div class="proyecto">
+            <img src="./assets/imagenes/tothemoon.png" alt="Sirena pirata saltando">
+            <h4>Sirena pirata saltando</h4>
+            <a href="./assets/imagenes/tothemoon.png" target="_blank">Ver el retrato</a>
+          </div>
+          <div class="proyecto">
             <img src="./assets/imagenes/ZaBee.png" alt="Capitana abeja y pirata gato">
             <h4>Capitana abeja y pirata gato</h4>
             <a href="./assets/imagenes/ZaBee.png" target="_blank">Ver el retrato</a>
@@ -354,6 +364,11 @@
             <img src="" alt="El ORKO">
             <h4>El ORKO</h4>
             <a href="https://github.com/PocketSizeKaiju/ElOrko" target="_blank">Open</a>
+          </div>
+          <div class="proyecto">
+            <img src="" alt="Nostalgic Stars Pretty Cure">
+            <h4>Nostalgic Stars Pretty Cure</h4>
+            <a href="https://github.com/PocketSizeKaiju/NostalgicStarsPrettyCure" target="_blank">Open</a>
           </div>
           <div class="proyecto">
             <img src="./assets/imagenes/juegos/PETRIS.png" alt="Petris">
@@ -522,6 +537,11 @@
         <h3>Illustrations</h3>
         <div class="grid">
           <div class="proyecto">
+            <img src="./assets/imagenes/tothemoon.png" alt="Pirate mermaid jumping">
+            <h4>Pirate mermaid jumping</h4>
+            <a href="./assets/imagenes/tothemoon.png" target="_blank">Ver el retrato</a>
+          </div>
+          <div class="proyecto">
             <img src="./assets/imagenes/ZaBee.png" alt="Capitana abeja y pirata gato">
             <h4>Captain Bee and Pirate Cat</h4>
             <a href="./assets/imagenes/ZaBee.png" target="_blank">Open</a>
@@ -667,6 +687,11 @@
             <img src="" alt="El ORKO">
             <h4>El ORKO</h4>
             <a href="https://github.com/PocketSizeKaiju/ElOrko" target="_blank">開ける</a>
+          </div>
+          <div class="proyecto">
+            <img src="" alt="Nostalgic Stars Pretty Cure">
+            <h4>Nostalgic Stars Pretty Cure</h4>
+            <a href="https://github.com/PocketSizeKaiju/NostalgicStarsPrettyCure" target="_blank">Open</a>
           </div>
           <div class="proyecto">
             <img src="./assets/imagenes/juegos/PETRIS.png" alt="Petris">
@@ -836,6 +861,11 @@
 
         <h3>イラスト</h3>
         <div class="grid">
+          <div class="proyecto">
+            <img src="./assets/imagenes/tothemoon.png" alt="Sirena pirata saltando">
+            <h4>Sirena pirata saltando</h4>
+            <a href="./assets/imagenes/tothemoon.png" target="_blank">Ver el retrato</a>
+          </div>
           <div class="proyecto">
             <img src="./assets/imagenes/ZaBee.png" alt="Capitana abeja y pirata gato">
             <h4>ミツバチ隊長と海賊猫</h4>
